styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');

:root {
  --main-theme-color: rgb(141, 187, 66);
  --main-font-color: #fff;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Poppins', sans-serif;
}

p {
  margin: 15px 0;
  line-height: 1.8;
}

a {
  text-decoration: none;
  color: #333;
}

img {
  width: 100%;
  border-radius: 10px;
}

header {
  background: var(--main-theme-color);
  color: var(--main-font-color);
  padding: 5px;
  margin-bottom: 40px;
}

header a {
  color: var(--main-font-color);
}

.container {
  max-width: 768px;
  margin: auto;
  margin-bottom: 24px;
  /* overflow: auto; */
  padding: 0 10px;
}

.btn {
  display: inline-block;
  background: var(--main-theme-color);
  color: var(--main-font-color);
  border: none;
  padding: 8px 16px;
  border-radius: 5px;
  cursor: pointer;
  text-decoration: none;
  font-size: 15px;
  font-family: inherit;
}

.btn:focus {
  outline: none;
}

.btn:hover {
  transform: scale(0.98);
}

.btn-back {
  background: #f4f4f4;
  color: #000;
  margin-bottom: 20px;
}

.posts {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 30px;
  margin-top: 30px;
}

.card {
  padding: 15px;
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.card-image {
  display: flex;
  align-items: center;
  min-height: 320px;
  height: auto;
}

.card-page {
  padding: 15px 30px;
}

.post-title {
  margin: 10px 0;
}

.post-date {
  background: #f4f4f4;
  margin-bottom: 20px;
  padding: 3px 10px;
}

.post-body ul,
ol {
  font-size: 110%;
  line-height: 2.3;
  font-weight: bold;
  margin: 10px 0;
}

.post-body pre {
  background: #f4f4f4;
  padding: 20px;
  margin: 20px 0;
  line-height: 2.3;
}

@media (max-width: 500px) {
  .posts {
    grid-template-columns: 1fr;
  }
}

code {
  overflow: scroll-y;
}

